# QmlWatcher

./: CMakeLists.txt  readme.md
example/: MyItem.qml  main.qml
example/XQuick/: plugin.qmltypes  qmldir
qml/: XEditText.qml  main.qml  qml.qrc
src/: QmlLiveEngine.cpp  QmlLiveEngine.h  QmlWatcher.cpp  QmlWatcher.h  main.cpp
